@@ -1,14 +1,4 @@
-// JavaFX Setup
-// Configure build path by setting user library with JAVAFX
-// go to Run > Run Configurations > Java Application > (Select your Main Class/project) > Arguments > VM Arguments
-// Add vm arguments
-//--module-path "C:\Users\Christopher\Desktop\PROGRAM Applications\javafx-sdk-21.0.2\lib" --add-modules javafx.controls,javafx.fxml
-
-
-// mySql Connection Setup
-// Right-Click(Project) > Properties > Java Build Path > Library > Class Path > Add External Jar > Add the mysqlconnector jar file
 package application;
-
 
 import javafx.application.Application;
 import javafx.fxml.FXMLLoader;
@@ -16,8 +6,9 @@ import javafx.scene.Parent;
 import javafx.scene.Scene;
 import javafx.stage.Stage;
 
-
 public class Main extends Application{
+	
+	
 	public static void main(String[] args)  {		
 		launch(args);
 	}
@@ -27,7 +18,6 @@ public class Main extends Application{
 		Parent root = FXMLLoader.load(getClass().getResource("../Scenes/Login.fxml"));
 		Scene scene = new Scene(root);
 		scene.getStylesheets().add(getClass().getResource("../CSS/login.css").toExternalForm());
-		
 		primaryStage.setScene(scene);
 		primaryStage.show();
 	}
